examples/haproxy-ingress-controller-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  namespace: kube-system
  labels:
    run: haproxy-ingress-controller
  name: haproxy-ingress-controller
spec:
  template:
    metadata:
      labels:
        run: haproxy-ingress-controller
    spec:
      containers:
      - name: haproxy-ingress-controller
        image: quay.io/jcmoraisjr/haproxy-ingress
        args:
        # We assume a default secret is already configured on the kube-system namespace
        # kubectl create secret tls tls-certificate --key tls.key --cert tls.crt
        - --default-backend-service=$(POD_NAMESPACE)/ingress-default-backend
        - --default-ssl-certificate=$(POD_NAMESPACE)/tls-secret
        - --configmap=$(POD_NAMESPACE)/haproxy-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
