examples/nodejs-pod-hostnet.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs
  namespace:
  labels:
spec:
  containers:
  - name: nodejs
    image: kalise/nodejs-web-app:latest
    ports:
    - containerPort: 8080
  hostNetwork: true
