examples/nodejs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs
  namespace: default
  labels:
    app: nodejs
spec:
  containers:
  - name: nodejs
    image: kalise/nodejs-web-app:latest
    ports:
    - containerPort: 8080
