examples/haproxy-ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  labels:
    run: haproxy-ingress-controller
  name: haproxy-ingress-controller
spec:
  selector:
    run: haproxy-ingress-controller
  type: NodePort
  ports:
  - name: http
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: 443
  - name: stats
    nodePort: 31936
    port: 1936
    protocol: TCP
    targetPort: 1936
