examples/ingress-default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
  namespace: kube-system
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: ingress-default-backend
  type: ClusterIP
