examples/nginx-ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: nginx-ingress-controller
  labels:
    k8s-app: nginx-ingress-controller
spec:
  selector:
    k8s-app: nginx-ingress-controller
  type: NodePort
  ports:
    - name: https
      port: 443
      nodePort: 30443
      targetPort: 443
      protocol: TCP
    - name: http
      port: 80
      nodePort: 30080
      targetPort: 80
      protocol: TCP
