examples/tomcat-template-secrets.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: taas
  labels:
    run: tomcat
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8080
    nodePort: 31080
  selector:
    run: tomcat
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    run: tomcat
  name: tomcat-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tomcat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tomcat
    spec:
      containers:
      - image: docker.io/kalise/tommy:latest
        imagePullPolicy: IfNotPresent
        name: tomcat
        volumeMounts:
        - name: secrets
          mountPath: /opt/tomcat/conf/users
          readOnly: true
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      volumes:
      - name: secrets
        secret:
          secretName: tomcat-users
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30

# To create a secret:
# kubectl create secret generic tomcat-users --from-file=./tomcat-users.xml
# kubectl get secret tomcat-users -o json
